feat: add isOpaque prop to Button component

--- a/lib/components/Button/button.scss
+++ b/lib/components/Button/button.scss
@@ -99,7 +99,10 @@
         &__full-width {
             width: 100%;
         }
-
+        &__white-bg-wrapper {
+            background-color: var(--core-color-solid-slate-50);
+            padding: unset;
+        }
         &-label {
             text-wrap: nowrap;
         }
