feat: improve opaque button wrapper styles

--- a/lib/components/Button/button.scss
+++ b/lib/components/Button/button.scss
@@ -102,6 +102,8 @@
         &__white-bg-wrapper {
             background-color: var(--core-color-solid-slate-50);
             padding: unset;
+            height: fit-content;
+            width: fit-content;
         }
         &-label {
             text-wrap: nowrap;
