--- a/lib/components/Input/dropdown-field/dropdown.scss
+++ b/lib/components/Input/dropdown-field/dropdown.scss
@@ -30,7 +30,7 @@
                 padding: var(--core-spacing-200);
             }
 
-            &-md {
+            &-md, &-lg {
                 padding: var(--core-spacing-400);
             }
         }
