build: update quill link classname

--- a/lib/components/Link/link.scss
+++ b/lib/components/Link/link.scss
@@ -1,6 +1,6 @@
 @import "@styles/static.scss";
 
-.link {
+.quill-link {
     display: inline-flex;
     gap: var(--core-borderRadius-400);
     text-decoration: none;
