--- a/lib/components/Notification/notification.scss
+++ b/lib/components/Notification/notification.scss
@@ -4,7 +4,7 @@
     width: 100%;
     cursor: pointer;
     height: fit-content;
-    background-color: var(--component-modal-bg);
+    background-color: var(--component-notification-bg-banner);
 
     &:link,
     &:visited,
@@ -84,6 +84,16 @@
         transition: transform var(--motion-duration-snappy)
             var(--motion-easing-inandout);
 
+        .details {
+            .title {
+                color: var(--component-notification-title-color-banner);
+            }
+
+            .message {
+                color: var(--component-notification-message-color-banner);
+            }
+        }
+
         &.hidden {
             transform: translateY(100vh);
         }
@@ -104,6 +114,16 @@
         inset-block-end: var(--semantic-spacing-general-sm);
         inset-inline-start: var(--semantic-spacing-general-sm);
         z-index: 6;
+
+        .details {
+            .title {
+                color: var(--component-notification-title-color-banner);
+            }
+
+            .message {
+                color: var(--component-notification-message-color-banner);
+            }
+        }
 
         &--mobile {
             width: calc(100% - var(--semantic-spacing-general-md));
