--- a/lib/components/Notification/notification.scss
+++ b/lib/components/Notification/notification.scss
@@ -25,16 +25,16 @@
         cursor: pointer;
 
         &.info {
-            background-color: var(--core-color-opacity-blue-100);
+            background-color: var(--semantic-color-blue-opacity-surface-midHigh)
         }
         &.error {
-            background-color: var(--core-color-opacity-red-100);
+            background-color: var(--semantic-color-red-opacity-surface-midHigh);
         }
         &.success {
-            background-color: var(--core-color-opacity-green-100);
+            background-color: var(--semantic-color-green-opacity-surface-midHigh)
         }
         &.warning {
-            background-color: var(--core-color-opacity-yellow-100);
+            background-color: var(--semantic-color-yellow-opacity-surface-midHigh)
         }
 
         .badge-unread {
